--- a/YumFun/YumFun.xcodeproj/xcshareddata/xcschemes/YumFun.xcscheme
+++ b/YumFun/YumFun.xcodeproj/xcshareddata/xcschemes/YumFun.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1240"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3B8CAC3956E59F928387D0C6310E3B37"
-               BuildableName = "gRPCCertificates-Cpp.bundle"
-               BlueprintName = "gRPC-C++-gRPCCertificates-Cpp"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "C57662B625DBF9D600642CF2"
+               BuildableName = "YumFun.app"
+               BlueprintName = "YumFun"
+               ReferencedContainer = "container:YumFun.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -40,6 +40,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C57662B625DBF9D600642CF2"
+            BuildableName = "YumFun.app"
+            BlueprintName = "YumFun"
+            ReferencedContainer = "container:YumFun.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -47,6 +57,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C57662B625DBF9D600642CF2"
+            BuildableName = "YumFun.app"
+            BlueprintName = "YumFun"
+            ReferencedContainer = "container:YumFun.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
