--- a/YumFun/Podfile
+++ b/YumFun/Podfile
@@ -18,4 +18,6 @@ target 'YumFun' do
   pod 'FirebaseUI/Storage' 		
   
   pod 'TensorFlowLiteSwift/CoreML', '~> 2.4.0'
+ 
+  pod 'NVActivityIndicatorView'
 end
