--- a/YumFun/Podfile
+++ b/YumFun/Podfile
@@ -38,6 +38,8 @@ target 'YumFun' do
   # Notification and Alert
   pod 'SwiftEntryKit', '1.2.7'
 
+  # Multi-tier UIScrollView
+  pod 'SegementSlide', '3.0.1'
   # App Store Card View
   pod 'Cards'
 end
