--- a/YumFun/YumFun/Info.plist
+++ b/YumFun/YumFun/Info.plist
@@ -36,9 +36,13 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
-	<string>This app wants to take pictures.</string>
+	<string>This app wants to take pictures for user profile, recipes or provide gesture recognition in hands-free cooking mode.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>This app wants to use your photos.</string>
+	<string>This app wants to use photos for user profile or recipes.</string>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>This app wants to use speech recognition for easier recipe input.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app wants to use microphone for speech recognition.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
