--- a/YumFun/Podfile
+++ b/YumFun/Podfile
@@ -76,4 +76,7 @@ target 'YumFun' do
 
   # Floating Button
   pod 'JJFloatingActionButton'
+ 
+  # Easier Layout for Collection View
+  pod 'Blueprints'
 end
